Fix scrollbar

--- a/src/App.scss
+++ b/src/App.scss
@@ -85,6 +85,7 @@ a {
 
       .column:nth-child(2) {
         padding-bottom: 5rem;
+        margin-right: auto;
       }
     }
   }
